# dnasr

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: mtDNA.fasta
src/: lib.rs  main.rs
