[package]
name = "dnasr"
version = "0.9.0"
authors = ["Luk13Mad <56697676+Luk13Mad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33.3"
bio="0.32.0"
itertools="0.10.0"
rayon = "1.5"
ndarray = "0.14.0"
